@@ -17,6 +17,7 @@ except ImportError:
 from mint import database
 from mint.mint_error import *
 from mint.helperfuncs import toDatabaseTimestamp
+from rpath_common.xmllib import api1 as xmllib
 
 class BlessedAMIsTable(database.KeyedTable):
     name = 'BlessedAMIs'
@@ -81,6 +82,119 @@ class BlessedAMI(database.TableObject):
     def save(self):
         return self.server.updateBlessedAMI(self.blessedAMIId,
                 self.getDataAsDict())
+        
+class ErrorResponseObject(xmllib.BaseNode):
+    """
+    A object that maps to the EC2 XML response error from boto.
+    The data in this object consist of:
+        errors: a list of errors in the form of [{code,message}, ...] extracted
+                from the exception object XML
+        requestId: a unicode string containing the original request ID extracted
+                from the exception object XML
+        status: the HTML status code extracted from the exception object
+    """
+    
+    __slots__ = ('errors', 'requestId', 'status',)
+    
+    unknownCode = u'UnknownFailure'
+    unknownMessage = u'An unknown failure occurred'
+    
+    def __init__(self, exceptionObj = None, attributes = None, nsMap = None, 
+                 name = None):
+        
+        xmllib.BaseNode.__init__(self, attributes, nsMap, name)
+        self.requestId = u''
+        self.errors = []
+        self.status = 0
+        
+        if exceptionObj:
+            self.status = exceptionObj.status
+            self.parseXML(exceptionObj.body)
+                
+    def addChild(self, childNode):
+        """
+        Override xmllib.BaseNode.addChild()
+        """
+        if childNode.getName() == 'RequestID':
+            self.requestId = childNode.getText()
+        if childNode.getName() == 'Errors':
+            self._extractErrorNodeData(childNode.getChildren('Error'))
+            
+    def parseXML(self, xmlData):
+        """
+        Parse the response XML and set the proper values
+        @param xmlData: the XML data to parse
+        @type  xmlData: C{str}
+        """
+        if xmlData:
+            binder = xmllib.DataBinder()
+            binder.registerType(ErrorResponseObject, name = 'Response')
+            binder.registerType(xmllib.StringNode, name = 'RequestId')
+            obj = binder.parseString(xmlData)
+            if obj and isinstance(obj, ErrorResponseObject):
+                self.requestId = obj.requestId
+                self.errors = obj.errors
+                
+        # there should always be error data present since this is an error obj
+        if not self.errors:
+            self._addError(ErrorResponseObject.unknownCode, 
+                           ErrorResponseObject.unknownMessage)
+            
+    def freeze(self):
+        """
+        Marshal the object for transfer via XMLRPC
+        @return: A tuple (status, requestId, errors)
+        @rtype: C{tuple}
+        """
+        return self.status, self.requestId, self.errors
+    
+    def thaw(self, marshalledData):
+        """
+        Unmarshal the data
+        @param marshalledData: The marshalled data
+        """
+        if marshalledData:
+            self.status = marshalledData[0]
+            self.requestId = marshalledData[1]
+            self.errors = marshalledData[2]
+    
+    def _extractErrorNodeData(self, errorNodes):
+        """
+        Get the error data from the error nodes and update the objects values
+        """
+        for errorNode in errorNodes:
+            code = ErrorResponseObject.unknownCode
+            message = ErrorResponseObject.unknownMessage
+            
+            # handle the code nodes, should only be 1, but be safe since we
+            # don't want to create an exception during error handling
+            codeNodes = errorNode.getChildren('Code')
+            if codeNodes and len(codeNodes) > 0:
+                code = codeNodes[0].getText()
+                
+            # handle the message nodes, should only be 1, but be safe since we
+            # don't want to create an exception during error handling
+            messageNodes = errorNode.getChildren('Message')
+            if messageNodes and len(messageNodes) > 0:
+                message = messageNodes[0].getText()
+                
+            # add the error
+            self._addError(code, message)
+            
+    def _addError(self, code, message):
+        """
+        Add an error and make sure error messages are not reported more than 
+        once.  Error codes can be reported more than once.
+        """
+        doIt = True
+        for error in self.errors:
+            if error['message'].lower() == message.lower():
+                doIt = False
+                break
+            
+        if doIt:
+            self.errors.append(dict(code=code, message=message))
+        
 
 class EC2Wrapper(object):
 
@@ -133,9 +247,6 @@ class EC2Wrapper(object):
     def validateCredentials(self):
         try:
             self.getAllKeyPairs()
-            rc = True, None
+            return True
         except EC2ResponseError, e:
-            rc = False, e.status
-            
-        return rc
-            
+            raise EC2Exception(ErrorResponseObject(e))       
