@@ -1814,27 +1814,48 @@ class WebPageTest(mint_rephelp.WebRepositoryHelper):
     def testCloudSettings(self):
         client, userId = self.quickMintUser('foouser', 'foopass')
         
-        def validateAMICredentials(self, authToken):
-            return True, None
-                
-        oldValidateAMICredentials = client.server._server.validateAMICredentials
-        client.server._server.validateAMICredentials = validateAMICredentials
-        try:
-            page = self.webLogin('foouser', 'foopass')
-            page = self.fetchWithRedirect('/cloudSettings')
-            page = page.postForm(1, page.post,
-                              { 'awsAccountNumber': '1234-5678-9011',
-                                'awsPublicAccessKeyId': '01010101010101010101',
-                                'awsSecretAccessKey': '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123' })
-    
-            ec2Creds = client.getEC2CredentialsForUser(userId)
-            self.failUnlessEqual(ec2Creds['awsAccountNumber'], '123456789011')
-            self.failUnlessEqual(ec2Creds['awsPublicAccessKeyId'],
-                    '01010101010101010101')
-            self.failUnlessEqual(ec2Creds['awsSecretAccessKey'],
-                    '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123')
-        finally:
-            client.server._server.validateAMICredentials = oldValidateAMICredentials
+        self.webLogin('foouser', 'foopass')
+        page = self.fetchWithRedirect('/cloudSettings')
+        page = page.postForm(1, page.post,
+                          { 'awsAccountNumber': '1234-5678-9011',
+                            'awsPublicAccessKeyId': '01010101010101010101',
+                            'awsSecretAccessKey': '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123',
+                            'force': "1"})
+
+        ec2Creds = client.getEC2CredentialsForUser(userId)
+        self.failUnlessEqual(ec2Creds['awsAccountNumber'], '123456789011')
+        self.failUnlessEqual(ec2Creds['awsPublicAccessKeyId'],
+                '01010101010101010101')
+        self.failUnlessEqual(ec2Creds['awsSecretAccessKey'],
+                '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123')
+        
+    def testRemoveCloudSettings(self):
+        client, userId = self.quickMintUser('foouser', 'foopass')
+        
+        self.webLogin('foouser', 'foopass')
+        
+        # add some settings and enusre they are there
+        page = self.fetchWithRedirect('/cloudSettings')
+        page = page.postForm(1, page.post,
+                          { 'awsAccountNumber': '1234-5678-9011',
+                            'awsPublicAccessKeyId': '01010101010101010101',
+                            'awsSecretAccessKey': '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123',
+                            'force': "1"})
+
+        ec2Creds = client.getEC2CredentialsForUser(userId)
+        self.failUnlessEqual(ec2Creds['awsAccountNumber'], '123456789011')
+        self.failUnlessEqual(ec2Creds['awsPublicAccessKeyId'],
+                '01010101010101010101')
+        self.failUnlessEqual(ec2Creds['awsSecretAccessKey'],
+                '1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ+123')
+        
+        # remove them and make sure they are gone
+        page = self.fetchWithRedirect('/removeCloudSettings')
+        page = page.postForm(1, page.post, {'confirm': "1"})
+        ec2Creds = client.getEC2CredentialsForUser(userId)
+        self.assertTrue(ec2Creds == {'awsPublicAccessKeyId': '', 
+                                     'awsSecretAccessKey': '', 
+                                     'awsAccountNumber': ''})
 
 
 if __name__ == "__main__":
